<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarsCreate">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/brand"/>

    <EditText
        android:id="@+id/brand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:textAlignment="center"
        android:hint="@string/brand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:layout_constraintEnd_toStartOf="@+id/model"
        app:layout_constraintBottom_toTopOf="@+id/carPrice"/>

    <EditText
        android:id="@+id/model"
        android:hint="@string/model"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:layout_constraintStart_toEndOf="@+id/brand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/carPrice"/>

    <EditText
        android:id="@+id/carPrice"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brand"
        app:layout_constraintEnd_toEndOf="@+id/model"
        app:layout_constraintBottom_toTopOf="@+id/button_table"/>



    <TableRow
        android:id="@+id/button_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/dbOutput"
        app:layout_constraintEnd_toStartOf="@id/dbOutput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carPrice"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:background="@drawable/button_background"
            android:text="@string/add"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:background="@drawable/button_background"
            android:text="@string/clear"/>

    </TableRow>

    <TableLayout
        android:id="@+id/dbOutput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_table">
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>