<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_users"
        android:layout_marginTop="15dp"

        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/username_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/login"

        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/button_table"
        app:layout_constraintEnd_toStartOf="@+id/password_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/head"
         />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"

        android:hint="@string/password"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/button_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/username_field"
        app:layout_constraintTop_toBottomOf="@id/head"
        tools:ignore="TextContrastCheck"
      />

    <TableLayout
        android:id="@+id/dbOutput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableRow
        android:id="@+id/button_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/dbOutput"
        app:layout_constraintEnd_toStartOf="@id/dbOutput"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_field"
      >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:shadowColor="@color/black"
            android:textAlignment="center"

            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:layout_weight="1"
            android:text="@string/add" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:shadowColor="@color/black"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:textAlignment="center"
            android:background="@drawable/button_background"
            android:layout_height="wrap_content"
            android:text="@string/clear" />
    </TableRow>


</androidx.constraintlayout.widget.ConstraintLayout>