<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeLicAcc">

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/change_my_profile"

        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:textAlignment="center"
        android:hint="Логин"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/password_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="13dp"
        android:hint="Пароль"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/username_field"
        app:layout_constraintTop_toBottomOf="@+id/head" />

    <TableRow
        android:id="@+id/button_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/password_field">


        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/button_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="@color/black"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:background="@drawable/button_background"
            android:text="@string/button_back" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="@color/black"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:background="@drawable/button_background"
            android:text="@string/button_save" />


    </TableRow>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_delete"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/button_delete"
        app:layout_constraintEnd_toEndOf="parent"
        android:shadowColor="@color/black"
        android:shadowRadius="1"
        android:shadowDx="1"
        android:shadowDy="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_table" />
</androidx.constraintlayout.widget.ConstraintLayout>